--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,74 @@
-/.git
+## Windows
+Thumbs.db
+
+## gradle
 /.gradle
-/.settings
-/asm
-/bin
 /build
-/config
-/crash-reports
-/dumps
-/eclipse
-/journeymap
-/libs
-/logs
-/mods
-/mod-config
-/quantumAnomalies
-/resourcepacks
-/saves
-/scripts
-/screenshots
+
+## ForgeGradle
+/run
+
+## eclipse
+/.settings
+/.metadata
 /.classpath
 /.project
-/copy
-/git
-/world
-/armourersWorkshop
-/equipmen-database
+/eclipse
+/bin
 
+## intellij
+/out
+/.idea
+/atlassian-ide-plugin.xml
+/*.ipr
+/*.iws
+/*.iml
+
+## Private Stuffs
+/private.properties
+
+## Jars
+*.jar
+!/gradle/wrapper/gradle-wrapper.jar
+
+### OSX (adds a lot of garbage)###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+# Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+*.bat
+LICENSE*
+forge*
+CREDITS*
+MinecraftForge*
+README.txt
+*.psd
+*.pdn
+
+/src/main/resources/assets/thaumcraft
+
+##API
 /src/api
-wg*.*
-
-options.txt
-eula.txt
-server.properties
-usercache.json
-usernamecache.json
-whitelist.json
-ops.json
-banned-ips.json
-banned-players.json
-ReCubed.dat
-servers.dat
-config.cfg
-minetweaker.log
+/models
